--- a/source/EXBP.Dipren/Data/Memory/InMemoryEngineDataStoreResources.resx
+++ b/source/EXBP.Dipren/Data/Memory/InMemoryEngineDataStoreResources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="JobWithSameIdentiferAlreadyExists" xml:space="preserve">
-    <value>A job with the specified unique identifier already exists in the store.</value>
+    <value>A job with the specified unique identifier already exists in the data store.</value>
+  </data>
+  <data name="PartitionWithSameIdentifierAlreadyExists" xml:space="preserve">
+    <value>A partition with the specified unique identifier already exists in the data store.</value>
+  </data>
+  <data name="ReferencedJobDoesNotExist" xml:space="preserve">
+    <value>The job referenced by the partition does not exist within the data store.</value>
   </data>
 </root>
