--- a/source/EXBP.Dipren/Data/Memory/InMemoryEngineDataStoreResources.resx
+++ b/source/EXBP.Dipren/Data/Memory/InMemoryEngineDataStoreResources.resx
@@ -123,8 +123,14 @@
   <data name="JobWithSpecifiedIdentifierDoesNotExist" xml:space="preserve">
     <value>A job with the specified unique identifier does not exist in the data store.</value>
   </data>
+  <data name="PartitionLockNoLongerHeld" xml:space="preserve">
+    <value>The lock on the specified partition is no longer held.</value>
+  </data>
   <data name="PartitionWithSameIdentifierAlreadyExists" xml:space="preserve">
     <value>A partition with the specified unique identifier already exists in the data store.</value>
+  </data>
+  <data name="PartitionWithSpecifiedIdentifierDoesNotExist" xml:space="preserve">
+    <value>A partition with the specified unique identifier does not exist in the data store.</value>
   </data>
   <data name="ReferencedJobDoesNotExist" xml:space="preserve">
     <value>The job referenced by the partition does not exist within the data store.</value>
