--- a/source/EXBP.Dipren/EngineResources.resx
+++ b/source/EXBP.Dipren/EngineResources.resx
@@ -117,22 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="JobWithSameIdentiferAlreadyExists" xml:space="preserve">
-    <value>A job with the specified unique identifier already exists in the data store.</value>
-  </data>
-  <data name="JobWithSpecifiedIdentifierDoesNotExist" xml:space="preserve">
-    <value>A job with the specified unique identifier does not exist in the data store.</value>
-  </data>
-  <data name="PartitionLockNoLongerHeld" xml:space="preserve">
-    <value>The lock on the specified partition is no longer held.</value>
-  </data>
-  <data name="PartitionWithSameIdentifierAlreadyExists" xml:space="preserve">
-    <value>A partition with the specified unique identifier already exists in the data store.</value>
-  </data>
-  <data name="PartitionWithSpecifiedIdentifierDoesNotExist" xml:space="preserve">
-    <value>A partition with the specified unique identifier does not exist in the data store.</value>
-  </data>
-  <data name="ReferencedJobDoesNotExist" xml:space="preserve">
-    <value>The job referenced by the partition does not exist within the data store.</value>
+  <data name="NoJobScheduledWithSpecifiedIdentifier" xml:space="preserve">
+    <value>A distributed processing job with the specified identifier is not scheduled.</value>
   </data>
 </root>
