--- a/source/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SqlCountIncompletePartitions" xml:space="preserve">
+    <value>SELECT
+  COUNT()
+FROM
+  "partitions"
+WHERE
+  ("job_id" LIKE $job_id) AND
+  ("is_completed" = 0);</value>
+  </data>
   <data name="SqlCreateSchema" xml:space="preserve">
     <value>CREATE TABLE IF NOT EXISTS "jobs"
 (
