--- a/source/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -119,12 +119,8 @@
   </resheader>
   <data name="SqlCountIncompletePartitions" xml:space="preserve">
     <value>SELECT
-  COUNT()
-FROM
-  "partitions"
-WHERE
-  ("job_id" LIKE $job_id) AND
-  ("is_completed" = 0);</value>
+  (SELECT COUNT() FROM "jobs" WHERE ("id" = $job_id)) AS "job_count",
+  (SELECT COUNT() FROM "partitions" WHERE ("job_id" = $job_id) AND ("is_completed" = 0)) AS "partition_count";</value>
   </data>
   <data name="SqlCreateSchema" xml:space="preserve">
     <value>CREATE TABLE IF NOT EXISTS "jobs"
@@ -133,7 +129,7 @@ WHERE
   "created" DATETIME NOT NULL,
   "updated" DATETIME NOT NULL,
   "state" INTEGER NOT NULL,
-  "exception" TEXT NULL,
+  "error" TEXT NULL,
   
   CONSTRAINT "pk_jobs" PRIMARY KEY ("id")
 )
@@ -149,7 +145,7 @@ CREATE TABLE IF NOT EXISTS "partitions"
   "owner" VARCHAR(256) NULL,
   "first" TEXT NOT NULL,
   "last" TEXT NOT NULL,
-  "inclusive" BOOLEAN NOT NULL,
+  "is_inclusive" BOOLEAN NOT NULL,
   "position" TEXT NULL,
   "processed" BIGINT NOT NULL,
   "remaining" BIGINT NOT NULL,
@@ -157,11 +153,30 @@ CREATE TABLE IF NOT EXISTS "partitions"
   "is_split_requested" BOOLEAN NOT NULL,
   
   CONSTRAINT "pk_partitions" PRIMARY KEY ("id"),
-  CONSTRAINT "fk_partition_to_job" FOREIGN KEY ("job_id") REFERENCES "jobs"("id")
+  CONSTRAINT "fk_partition_to_job" FOREIGN KEY ("job_id") REFERENCES "jobs"("id") ON UPDATE RESTRICT ON DELETE RESTRICT
 )
 WITHOUT ROWID;
 
 CREATE INDEX "ix_partitions_by_state" ON "partitions" ("job_id", "updated", "owner") WHERE ("is_completed" = 0);</value>
+  </data>
+  <data name="SqlDoesJobExist" xml:space="preserve">
+    <value>SELECT
+  COUNT() AS "count"
+FROM
+  "jobs"
+WHERE
+  ("id" = $id);</value>
+  </data>
+  <data name="SqlDoesPartitionExist" xml:space="preserve">
+    <value>SELECT
+  COUNT() AS "count"
+FROM
+  "partitions"
+WHERE
+  ("id" = $id);</value>
+  </data>
+  <data name="SqlEnableForeignKeys" xml:space="preserve">
+    <value>PRAGMA foreign_keys = ON;</value>
   </data>
   <data name="SqlInsertJob" xml:space="preserve">
     <value>INSERT INTO "jobs"
@@ -170,7 +185,7 @@ CREATE INDEX "ix_partitions_by_state" ON "partitions" ("job_id", "updated", "own
   "created",
   "updated",
   "state",
-  "exception"
+  "error"
 )
 VALUES
 (
@@ -178,7 +193,7 @@ VALUES
   $created,
   $updated,
   $state,
-  $exception
+  $error
 );</value>
   </data>
   <data name="SqlInsertPartition" xml:space="preserve">
@@ -191,7 +206,7 @@ VALUES
   "owner",
   "first",
   "last",
-  "inclusive",
+  "is_inclusive",
   "position",
   "processed",
   "remaining",
@@ -207,12 +222,147 @@ VALUES
   $owner,
   $first,
   $last,
-  $inclusive,
+  $is_inclusive,
   $position,
   $processed,
   $remaining,
   $is_completed,
   $is_split_requested
 );</value>
+  </data>
+  <data name="SqlReportProgress" xml:space="preserve">
+    <value>UPDATE
+  "partitions"
+SET
+  "updated" = $updated,
+  "position" = $position,
+  "processed" = ("processed" + $progress),
+  "remaining" = ("remaining" - $progress),
+  "is_completed" = $completed
+WHERE
+  ("id" = $id) AND
+  ("owner" = $owner)
+RETURNING
+  "id" AS "id",
+  "job_id" AS "job_id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "owner" AS "owner",
+  "first" AS "first",
+  "last" AS "last",
+  "is_inclusive" AS "is_inclusive",
+  "position" AS "position",
+  "processed" AS "processed",
+  "remaining" AS "remaining",
+  "is_completed" AS "is_completed",
+  "is_split_requested" AS "is_split_requested";</value>
+  </data>
+  <data name="SqlRetrieveJobById" xml:space="preserve">
+    <value>SELECT
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "state" AS "state",
+  "error" AS "error"
+FROM
+  "jobs"
+WHERE
+  "id" = $id;</value>
+  </data>
+  <data name="SqlRetrievePartitionById" xml:space="preserve">
+    <value>SELECT
+  "job_id" AS "job_id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "owner" AS "owner",
+  "first" AS "first",
+  "last" AS "last",
+  "is_inclusive" AS "is_inclusive",
+  "position" AS "position",
+  "processed" AS "processed",
+  "remaining" AS "remaining",
+  "is_completed" AS "is_completed",
+  "is_split_requested" AS "is_split_requested"
+FROM
+  "partitions"
+WHERE
+  ("id" = $id);</value>
+  </data>
+  <data name="SqlTryAcquirePartition" xml:space="preserve">
+    <value>UPDATE
+  "partitions"
+SET
+  "updated" = $updated,
+  "owner" = $owner
+WHERE
+  ("job_id" = $job_id) AND
+  (("owner" IS NULL) OR ("updated" &lt; $active)) AND
+  ("is_completed" = 0)
+RETURNING
+  "id" AS "id",
+  "job_id" AS "job_id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "owner" AS "owner",
+  "first" AS "first",
+  "last" AS "last",
+  "is_inclusive" AS "is_inclusive",
+  "position" AS "position",
+  "processed" AS "processed",
+  "remaining" AS "remaining",
+  "is_completed" AS "is_completed",
+  "is_split_requested" AS "is_split_requested"
+ORDER BY
+  "remaining" DESC
+LIMIT
+  1;</value>
+  </data>
+  <data name="SqlTryRequestSplit" xml:space="preserve">
+    <value>UPDATE
+  "partitions"
+SET
+  "is_split_requested" = 1
+WHERE
+  ("job_id" = $job_id) AND
+  ("owner" IS NOT NULL) AND
+  ("updated" &gt;= $active) AND
+  ("is_completed" = 0) AND
+  ("is_split_requested" = 0)
+ORDER BY
+  "remaining" DESC
+LIMIT
+  1;
+</value>
+  </data>
+  <data name="SqlUpdateJobById" xml:space="preserve">
+    <value>UPDATE
+  "jobs"
+SET
+  "updated" = $updated,
+  "state" = $state,
+  "error" = $error
+WHERE
+  ("id" = $id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="SqlUpdateSplitPartition" xml:space="preserve">
+    <value>UPDATE
+  "partitions"
+SET
+  "updated" = $updated,
+  "last" = $last,
+  "is_inclusive" = $is_inclusive,
+  "position" = $position,
+  "processed" = $processed,
+  "remaining" = $remaining,
+  "is_split_requested" = $is_split_requested
+WHERE
+  ("id" = $partition_id) AND
+  ("owner" = $owner);</value>
   </data>
 </root>
