Introduces the "partitions"."acquired" column in Postgres SQL database schema.

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -275,7 +275,8 @@ UPDATE
   "dipren"."partitions" AS "target"
 SET
   "updated" = @updated,
-  "owner" = @owner
+  "owner" = @owner,
+  "acquired" = ("acquired" + 1)
 FROM
   "candidate"
 WHERE
