Fixes the issue that processing nodes may steal partitions from each other when they try to acquire a partition.

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -270,6 +270,7 @@ WHERE
     "remaining" DESC
   LIMIT
     1
+  FOR UPDATE
 )
 UPDATE
   "dipren"."partitions" AS "target"
@@ -313,6 +314,7 @@ RETURNING
     "remaining" DESC
   LIMIT
     1
+  FOR UPDATE
 )
 UPDATE
   "dipren"."partitions" AS "target"
