Adds support for processing a UUID key range (#25)

--- a/source/EXBP.Dipren/GuidKeyArithmeticsResources.resx
+++ b/source/EXBP.Dipren/GuidKeyArithmeticsResources.resx
@@ -117,243 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="QueryCountIncompletePartitions" xml:space="preserve">
-    <value>SELECT
-  (SELECT COUNT(1) FROM "dipren"."jobs" WHERE ("id" = @job_id)) AS "job_count",
-  (SELECT COUNT(1) FROM "dipren"."partitions" WHERE ("job_id" = @job_id) AND ("is_completed" = FALSE)) AS "partition_count";</value>
-  </data>
-  <data name="QueryCountJobs" xml:space="preserve">
-    <value>SELECT
-  COUNT(1) AS "count"
-FROM
-  "dipren"."jobs";</value>
-  </data>
-  <data name="QueryDoesJobExist" xml:space="preserve">
-    <value>SELECT
-  COUNT(1) AS "count"
-FROM
-  "dipren"."jobs"
-WHERE
-  ("id" = @id);</value>
-  </data>
-  <data name="QueryDoesPartitionExist" xml:space="preserve">
-    <value>SELECT
-  COUNT(1) AS "count"
-FROM
-  "dipren"."partitions"
-WHERE
-  ("id" = @id);</value>
-  </data>
-  <data name="QueryInsertJob" xml:space="preserve">
-    <value>INSERT INTO "dipren"."jobs"
-(
-  "id",
-  "created",
-  "updated",
-  "state",
-  "error"
-)
-VALUES
-(
-  @id,
-  @created,
-  @updated,
-  @state,
-  @error
-);</value>
-  </data>
-  <data name="QueryInsertPartition" xml:space="preserve">
-    <value>INSERT INTO "dipren"."partitions"
-(
-  "id",
-  "job_id",
-  "created",
-  "updated",
-  "owner",
-  "first",
-  "last",
-  "is_inclusive",
-  "position",
-  "processed",
-  "remaining",
-  "is_completed",
-  "is_split_requested"
-)
-VALUES
-(
-  @id,
-  @job_id,
-  @created,
-  @updated,
-  @owner,
-  @first,
-  @last,
-  @is_inclusive,
-  @position,
-  @processed,
-  @remaining,
-  @is_completed,
-  @is_split_requested
-);</value>
-  </data>
-  <data name="QueryReportProgress" xml:space="preserve">
-    <value>UPDATE
-  "dipren"."partitions"
-SET
-  "updated" = @updated,
-  "position" = @position,
-  "processed" = ("processed" + @progress),
-  "remaining" = ("remaining" - @progress),
-  "is_completed" = @completed
-WHERE
-  ("id" = @id) AND
-  ("owner" = @owner)
-RETURNING
-  "id" AS "id",
-  "job_id" AS "job_id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "owner" AS "owner",
-  "first" AS "first",
-  "last" AS "last",
-  "is_inclusive" AS "is_inclusive",
-  "position" AS "position",
-  "processed" AS "processed",
-  "remaining" AS "remaining",
-  "is_completed" AS "is_completed",
-  "is_split_requested" AS "is_split_requested";</value>
-  </data>
-  <data name="QueryRetrieveJobById" xml:space="preserve">
-    <value>SELECT
-  "id" AS "id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "state" AS "state",
-  "error" AS "error"
-FROM
-  "dipren"."jobs"
-WHERE
-  ("id" = @id);</value>
-  </data>
-  <data name="QueryRetrievePartitionById" xml:space="preserve">
-    <value>SELECT
-  "id" AS "id",
-  "job_id" AS "job_id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "owner" AS "owner",
-  "first" AS "first",
-  "last" AS "last",
-  "is_inclusive" AS "is_inclusive",
-  "position" AS "position",
-  "processed" AS "processed",
-  "remaining" AS "remaining",
-  "is_completed" AS "is_completed",
-  "is_split_requested" AS "is_split_requested"
-FROM
-  "dipren"."partitions"
-WHERE
-  ("id" = @id);</value>
-  </data>
-  <data name="QueryTryAcquirePartition" xml:space="preserve">
-    <value>WITH "candidate" AS
-(
-  SELECT
-    "id"
-  FROM
-    "dipren"."partitions"
-  WHERE
-    ("job_id" = @job_id) AND
-    (("owner" IS NULL) OR ("updated" &lt; @active)) AND
-    ("is_completed" = FALSE)
-  ORDER BY
-    "remaining" DESC
-  LIMIT
-    1
-  FOR UPDATE
-)
-UPDATE
-  "dipren"."partitions" AS "target"
-SET
-  "updated" = @updated,
-  "owner" = @owner,
-  "acquired" = ("acquired" + 1)
-FROM
-  "candidate"
-WHERE
-  ("target"."id" = "candidate"."id")
-RETURNING
-  "target"."id" AS "id",
-  "job_id" AS "job_id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "owner" AS "owner",
-  "first" AS "first",
-  "last" AS "last",
-  "is_inclusive" AS "is_inclusive",
-  "position" AS "position",
-  "processed" AS "processed",
-  "remaining" AS "remaining",
-  "is_completed" AS "is_completed",
-  "is_split_requested" AS "is_split_requested";</value>
-  </data>
-  <data name="QueryTryRequestSplit" xml:space="preserve">
-    <value>WITH "candidate" AS
-(
-  SELECT
-    "id"
-  FROM
-    "dipren"."partitions"
-  WHERE
-    ("job_id" = @job_id) AND
-    ("owner" IS NOT NULL) AND
-    ("updated" &gt;= @active) AND
-    ("is_completed" = FALSE) AND
-    ("is_split_requested" = FALSE)
-  ORDER BY
-    "remaining" DESC
-  LIMIT
-    1
-  FOR UPDATE
-)
-UPDATE
-  "dipren"."partitions" AS "target"
-SET
-  "is_split_requested" = TRUE
-FROM
-  "candidate"
-WHERE
-  ("target"."id" = "candidate"."id");</value>
-  </data>
-  <data name="QueryUpdateJobById" xml:space="preserve">
-    <value>UPDATE
-  "dipren"."jobs"
-SET
-  "updated" = @updated,
-  "state" = @state,
-  "error" = @error
-WHERE
-  ("id" = @id)
-RETURNING
-  "id" AS "id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "state" AS "state",
-  "error" AS "error";</value>
-  </data>
-  <data name="QueryUpdateSplitPartition" xml:space="preserve">
-    <value>UPDATE
-  "dipren"."partitions"
-SET
-  "updated" = @updated,
-  "last" = @last,
-  "is_inclusive" = @is_inclusive,
-  "position" = @position,
-  "processed" = @processed,
-  "remaining" = @remaining,
-  "is_split_requested" = @is_split_requested
-WHERE
-  ("id" = @partition_id) AND
-  ("owner" = @owner);</value>
+  <data name="MessageInvalidGuidLayout" xml:space="preserve">
+    <value>The specified  GUID/UUID layout is not valid. The layout must contain exactly 16 unqiue byte values between 0 and 15.</value>
   </data>
 </root>
