Defines the "schedule" and "run" commands and their options.

--- a/demo/EXBP.Dipren.Demo.Postgres/EntryPointResources.resx
+++ b/demo/EXBP.Dipren.Demo.Postgres/EntryPointResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DescriptionCommandDeploy" xml:space="preserve">
-    <value>Create the required database structure and populates the source database.</value>
+    <value>Creates the required database structure and populates the source database.</value>
   </data>
   <data name="DescriptionCommandRemove" xml:space="preserve">
     <value>Removes all database objects.</value>
@@ -128,10 +128,22 @@
 
 This application demonstrates the capabilities of the Dipren framework. It requires a Postgres SQL Server up and running.</value>
   </data>
+  <data name="DescriptionCommandRun" xml:space="preserve">
+    <value>Runs a distributed processing job.</value>
+  </data>
+  <data name="DescriptionCommandSchedule" xml:space="preserve">
+    <value>Schedules a distributed processing processing job.</value>
+  </data>
   <data name="DescriptionOptionDatabase" xml:space="preserve">
     <value>The connection string to the Postgres SQL database to use.</value>
   </data>
-  <data name="DescriptionOptionDatasetSize" xml:space="preserve">
+  <data name="DescriptionOptionDeployDatasetSize" xml:space="preserve">
     <value>The number of rows to generate in the source database.</value>
+  </data>
+  <data name="DescriptionOptionName" xml:space="preserve">
+    <value>The name of the processing job.</value>
+  </data>
+  <data name="DescriptionOptionRunThreads" xml:space="preserve">
+    <value>The number of processing threads to start.</value>
   </data>
 </root>
