--- a/demo/EXBP.Dipren.Demo.Postgres/Commands/ScheduleResources.resx
+++ b/demo/EXBP.Dipren.Demo.Postgres/Commands/ScheduleResources.resx
@@ -117,36 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DescriptionCommandDeploy" xml:space="preserve">
-    <value>Creates the required database structure and populates the source database.</value>
+  <data name="MessageDone" xml:space="preserve">
+    <value>done.</value>
   </data>
-  <data name="DescriptionCommandProcess" xml:space="preserve">
-    <value>Runs a distributed processing job.</value>
+  <data name="MessageFailed" xml:space="preserve">
+    <value>failed.</value>
   </data>
-  <data name="DescriptionCommandRemove" xml:space="preserve">
-    <value>Removes all database objects.</value>
-  </data>
-  <data name="DescriptionCommandRoot" xml:space="preserve">
-    <value>Dipren Demo Application using Postgres
-
-This application demonstrates the capabilities of the Dipren framework. It requires a Postgres SQL Server up and running.</value>
-  </data>
-  <data name="DescriptionCommandSchedule" xml:space="preserve">
-    <value>Schedules a distributed processing processing job.</value>
-  </data>
-  <data name="DescriptionOptionDatabase" xml:space="preserve">
-    <value>The connection string to the Postgres SQL database to use.</value>
-  </data>
-  <data name="DescriptionOptionDeployDatasetSize" xml:space="preserve">
-    <value>The number of rows to generate in the source database.</value>
-  </data>
-  <data name="DescriptionOptionName" xml:space="preserve">
-    <value>The name of the processing job.</value>
-  </data>
-  <data name="DescriptionOptionProcessThreads" xml:space="preserve">
-    <value>The number of processing threads to start.</value>
-  </data>
-  <data name="DescriptionOptionTimeout" xml:space="preserve">
-    <value>The timeout for processing a single batch in milliseconds.</value>
+  <data name="MessageSchedulingJob" xml:space="preserve">
+    <value>Scheduling distributed processing job '{0}' ... </value>
   </data>
 </root>
