--- a/demo/EXBP.Dipren.Demo.Postgres/Commands/ProcessResources.resx
+++ b/demo/EXBP.Dipren.Demo.Postgres/Commands/ProcessResources.resx
@@ -117,42 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DescriptionCommandDeploy" xml:space="preserve">
-    <value>Creates the required database structure and populates the source database.</value>
+  <data name="MessageCompleted" xml:space="preserve">
+    <value>Processing job completed in {0}.</value>
   </data>
-  <data name="DescriptionCommandProcess" xml:space="preserve">
-    <value>Runs a distributed processing job.</value>
+  <data name="MessageDone" xml:space="preserve">
+    <value>done.</value>
   </data>
-  <data name="DescriptionCommandRemove" xml:space="preserve">
-    <value>Removes all database objects.</value>
+  <data name="MessageFailed" xml:space="preserve">
+    <value>failed.</value>
   </data>
-  <data name="DescriptionCommandRoot" xml:space="preserve">
-    <value>Dipren Demo Application using Postgres
-
-This application demonstrates the capabilities of the Dipren framework. It requires a Postgres SQL Server up and running.</value>
-  </data>
-  <data name="DescriptionCommandSchedule" xml:space="preserve">
-    <value>Schedules a distributed processing processing job.</value>
-  </data>
-  <data name="DescriptionOptionDatabase" xml:space="preserve">
-    <value>The connection string to the Postgres SQL database to use.</value>
-  </data>
-  <data name="DescriptionOptionDeployDatasetSize" xml:space="preserve">
-    <value>The number of rows to generate in the source database.</value>
-  </data>
-  <data name="DescriptionOptionName" xml:space="preserve">
-    <value>The name of the processing job.</value>
-  </data>
-  <data name="DescriptionOptionProcessBatchSize" xml:space="preserve">
-    <value>The number of items to process per batch.</value>
-  </data>
-  <data name="DescriptionOptionProcessBatchTimeout" xml:space="preserve">
-    <value>The timeout for processing a single batch (ms).</value>
-  </data>
-  <data name="DescriptionOptionProcessClockDrift" xml:space="preserve">
-    <value>The maximum time difference between processing nodes (ms).</value>
-  </data>
-  <data name="DescriptionOptionProcessThreads" xml:space="preserve">
-    <value>The number of processing threads to start.</value>
+  <data name="MessageStartingProcessing" xml:space="preserve">
+    <value>Starting up processing job '{0}' on {1} threads ... </value>
   </data>
 </root>
