--- a/demo/EXBP.Dipren.Demo.Postgres/EntryPointResources.resx
+++ b/demo/EXBP.Dipren.Demo.Postgres/EntryPointResources.resx
@@ -159,4 +159,8 @@ For more information visit https://github.com/chjahnert/exbp.dipren/wiki</value>
   <data name="DescriptionOptionProcessThreads" xml:space="preserve">
     <value>The number of processing threads to start.</value>
   </data>
+  <data name="MessageIntroduction" xml:space="preserve">
+    <value>This is a demo application that demonstrates how to use Dipren.
+For more details use arguent --help.</value>
+  </data>
 </root>
