--- a/demo/EXBP.Dipren.Demo.Postgres/EntryPointResources.resx
+++ b/demo/EXBP.Dipren.Demo.Postgres/EntryPointResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DescriptionArgumentJobName" xml:space="preserve">
+    <value>The name of the processing job.</value>
+  </data>
   <data name="DescriptionCommandDeploy" xml:space="preserve">
     <value>Creates the required database structure and populates the source database.</value>
   </data>
@@ -144,9 +147,6 @@ For more information visit https://github.com/chjahnert/exbp.dipren/wiki</value>
   <data name="DescriptionOptionDeployDatasetSize" xml:space="preserve">
     <value>The number of rows to generate in the source database.</value>
   </data>
-  <data name="DescriptionOptionName" xml:space="preserve">
-    <value>The name of the processing job.</value>
-  </data>
   <data name="DescriptionOptionProcessBatchSize" xml:space="preserve">
     <value>The number of items to process per batch.</value>
   </data>
@@ -158,6 +158,9 @@ For more information visit https://github.com/chjahnert/exbp.dipren/wiki</value>
   </data>
   <data name="DescriptionOptionProcessThreads" xml:space="preserve">
     <value>The number of processing threads to start.</value>
+  </data>
+  <data name="DescriptionOptionReverse" xml:space="preserve">
+    <value>Process the key range in descending order.</value>
   </data>
   <data name="MessageIntroduction" xml:space="preserve">
     <value>This is a demo application that demonstrates how to use Dipren.
