--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -134,6 +134,8 @@ FROM
   "id" VARCHAR(256) NOT NULL,
   "created" DATETIME NOT NULL,
   "updated" DATETIME NOT NULL,
+  "started" DATETIME NULL,
+  "completed" DATETIME NULL,
   "state" INTEGER NOT NULL,
   "error" TEXT NULL,
   
@@ -237,6 +239,60 @@ VALUES
   $is_split_requested
 );</value>
   </data>
+  <data name="QueryMarkJobCompleted" xml:space="preserve">
+    <value>UPDATE
+  "jobs"
+SET
+  "updated" = $timestamp,
+  "completed" = $timestamp,
+  "state" = $state
+WHERE
+  ("id" = $id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobFailed" xml:space="preserve">
+    <value>UPDATE
+  "jobs"
+SET
+  "updated" = $timestamp,
+  "state" = $state,
+  "error" = $error
+WHERE
+  ("id" = $id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobStarted" xml:space="preserve">
+    <value>UPDATE
+  "jobs"
+SET
+  "updated" = $timestamp,
+  "started" = $timestamp,
+  "state" = $state
+WHERE
+  ("id" = $id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
   <data name="QueryReportProgress" xml:space="preserve">
     <value>UPDATE
   "partitions"
@@ -269,6 +325,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
   "state" AS "state",
   "error" AS "error"
 FROM
@@ -356,6 +414,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
   "state" AS "state",
   "error" AS "error";</value>
   </data>
