--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -196,6 +196,60 @@ VALUES
   @is_split_requested
 );</value>
   </data>
+  <data name="QueryMarkJobCompleted" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "completed" = @timestamp,
+  "state" = @state
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobFailed" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "state" = @state,
+  "error" = @error
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobStarted" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "started" = @timestamp,
+  "state" = @state
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
   <data name="QueryReportProgress" xml:space="preserve">
     <value>UPDATE
   "dipren"."partitions"
@@ -228,6 +282,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
   "state" AS "state",
   "error" AS "error"
 FROM
@@ -338,6 +394,8 @@ RETURNING
   "id" AS "id",
   "created" AS "created",
   "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
   "state" AS "state",
   "error" AS "error";</value>
   </data>
