Fixes the issue that the PostgresEngineDataStore.InsertJobAsync(...) method does not persist the "started" and "completed" properties.

--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -150,6 +150,8 @@ WHERE
   "id",
   "created",
   "updated",
+  "started",
+  "completed",
   "state",
   "error"
 )
@@ -158,6 +160,8 @@ VALUES
   @id,
   @created,
   @updated,
+  @started,
+  @completed,
   @state,
   @error
 );</value>
