Fixes the issue that the SQLiteEngineDataStore.InsertJobAsync(...) method does not persist the "started" and "completed" properties.

--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -193,6 +193,8 @@ WHERE
   "id",
   "created",
   "updated",
+  "started",
+  "completed",
   "state",
   "error"
 )
@@ -201,6 +203,8 @@ VALUES
   $id,
   $created,
   $updated,
+  $started,
+  $completed,
   $state,
   $error
 );</value>
