--- a/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
+++ b/source/Store/Postgres/EXBP.Dipren.Data.Postgres/PostgresEngineDataStoreResources.resx
@@ -200,24 +200,7 @@ VALUES
   @is_split_requested
 );</value>
   </data>
-  <data name="QueryMarkJobAsReady" xml:space="preserve">
-    <value>UPDATE
-  "dipren"."jobs"
-SET
-  "updated" = @timestamp,
-  "state" = @state
-WHERE
-  ("id" = @id)
-RETURNING
-  "id" AS "id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "started" AS "started",
-  "completed" AS "completed",
-  "state" AS "state",
-  "error" AS "error";</value>
-  </data>
-  <data name="QueryMarkJobCompleted" xml:space="preserve">
+  <data name="QueryMarkJobAsCompleted" xml:space="preserve">
     <value>UPDATE
   "dipren"."jobs"
 SET
@@ -235,7 +218,7 @@ RETURNING
   "state" AS "state",
   "error" AS "error";</value>
   </data>
-  <data name="QueryMarkJobFailed" xml:space="preserve">
+  <data name="QueryMarkJobAsFailed" xml:space="preserve">
     <value>UPDATE
   "dipren"."jobs"
 SET
@@ -253,7 +236,24 @@ RETURNING
   "state" AS "state",
   "error" AS "error";</value>
   </data>
-  <data name="QueryMarkJobStarted" xml:space="preserve">
+  <data name="QueryMarkJobAsReady" xml:space="preserve">
+    <value>UPDATE
+  "dipren"."jobs"
+SET
+  "updated" = @timestamp,
+  "state" = @state
+WHERE
+  ("id" = @id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobAsStarted" xml:space="preserve">
     <value>UPDATE
   "dipren"."jobs"
 SET
