Ensures that the query resource names are consistent with the method names.

--- a/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
+++ b/source/Store/SQLite/EXBP.Dipren.Data.SQLite/SQLiteEngineDataStoreResources.resx
@@ -243,24 +243,7 @@ VALUES
   $is_split_requested
 );</value>
   </data>
-  <data name="QueryMarkJobAsReady" xml:space="preserve">
-    <value>UPDATE
-  "jobs"
-SET
-  "updated" = $timestamp,
-  "state" = $state
-WHERE
-  ("id" = $id)
-RETURNING
-  "id" AS "id",
-  "created" AS "created",
-  "updated" AS "updated",
-  "started" AS "started",
-  "completed" AS "completed",
-  "state" AS "state",
-  "error" AS "error";</value>
-  </data>
-  <data name="QueryMarkJobCompleted" xml:space="preserve">
+  <data name="QueryMarkJobAsCompleted" xml:space="preserve">
     <value>UPDATE
   "jobs"
 SET
@@ -278,7 +261,7 @@ RETURNING
   "state" AS "state",
   "error" AS "error";</value>
   </data>
-  <data name="QueryMarkJobFailed" xml:space="preserve">
+  <data name="QueryMarkJobAsFailed" xml:space="preserve">
     <value>UPDATE
   "jobs"
 SET
@@ -296,7 +279,24 @@ RETURNING
   "state" AS "state",
   "error" AS "error";</value>
   </data>
-  <data name="QueryMarkJobStarted" xml:space="preserve">
+  <data name="QueryMarkJobAsReady" xml:space="preserve">
+    <value>UPDATE
+  "jobs"
+SET
+  "updated" = $timestamp,
+  "state" = $state
+WHERE
+  ("id" = $id)
+RETURNING
+  "id" AS "id",
+  "created" AS "created",
+  "updated" AS "updated",
+  "started" AS "started",
+  "completed" AS "completed",
+  "state" AS "state",
+  "error" AS "error";</value>
+  </data>
+  <data name="QueryMarkJobAsStarted" xml:space="preserve">
     <value>UPDATE
   "jobs"
 SET
